2008-04-24  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej.

        Bug 18628: SQUIRRELFISH: need to support recursion limit
        <https://bugs.webkit.org/show_bug.cgi?id=18628>

        Partial fix -- this gets us some of the required bounds checking, but not
        complete coverage.  But it does manage to do them without regressing :D

        * VM/ExceptionHelpers.cpp:
        (KJS::createError):
        (KJS::createStackOverflowError):
        * VM/ExceptionHelpers.h:
        * VM/Machine.cpp:
        (KJS::slideRegisterWindowForCall):
        (KJS::Machine::execute):
        (KJS::Machine::privateExecute):
        * VM/RegisterFile.cpp:
        * VM/RegisterFile.h:
        (KJS::RegisterFile::):
        (KJS::RegisterFile::RegisterFile):
        (KJS::RegisterFile::grow):

2008-04-24  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        A tiny bit more handling of "arguments": create a real, but mostly
        hollow, arguments object.
        
        Fixes 2 regression tests.

2008-04-24  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Oliver.

        Bug 18717: SQUIRRELFISH: eval returns the wrong value for a variable declaration statement
        <https://bugs.webkit.org/show_bug.cgi?id=18717>

        Fixes a regression test, but exposes the failure of another due to the
        lack of getters and setters.

        * kjs/nodes.cpp:
        (KJS::ConstDeclNode::emitCodeSingle):
        (KJS::ConstDeclNode::emitCode):
        (KJS::ConstStatementNode::emitCode):
        (KJS::VarStatementNode::emitCode):
        * kjs/nodes.h:

2008-04-24  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.
        
        Print a CRASH statement when crashing, so test failures are not a
        mystery.

        * kjs/testkjs.cpp:
        (handleCrash):
        (main):

2008-04-24  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Geoffrey Garen.
