@@ -1,3 +1,9 @@
+2008-04-24  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Oliver Hunt.
+        
+        Added support for arguments.callee.
+
 2008-04-24  Oliver Hunt  <oliver@apple.com>
 
         Reviewed by Maciej.
